before category re-write

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database Configuration
-DATABASE_URL=postgresql://stout:Yyxd7fku!@localhost:5432/stout_requests
+# Database Configuration  
+DATABASE_URL=postgresql://cueplex_user:CuePlexSecure2024!@localhost:5432/cueplex
 
 # Application Security
 SECRET_KEY=your-secret-key-here-change-in-production
