--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ pydantic-settings==2.1.0
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 requests==2.31.0
+aiohttp==3.9.1
 plexapi==4.15.7
 apscheduler==3.10.4
+gunicorn==21.2.0
